--- a/diseno-web-cienfuegos.html
+++ b/diseno-web-cienfuegos.html
@@ -284,7 +284,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="menues/el-real/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Página web para hostal de renta y turismo en Cienfuegos" class="selection-img">
         <div class="overlay">
