--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <span class="separator">|</span>
         <a href="diseno-web-santa-clara.html" title="Desarrollo de Software y Automatización en Santa Clara">Santa Clara</a>
         <span class="separator">|</span>
-        <a href="#diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
+        <a href="diseno-web-cienfuegos.html" title="Identidad Visual y Branding en Cienfuegos">Cienfuegos</a>
         <span class="separator">|</span>
         <a href="#servicios" title="Soluciones Digitales en Trinidad">Trinidad</a>
       </nav>
