--- a/programadores-sancti-spiritus.html
+++ b/programadores-sancti-spiritus.html
@@ -284,7 +284,7 @@
       </div>
     </a>
 
-    <a href="menues/el-real.html" class="selection-card">
+    <a href="menues/el-real/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Página web para hostales y turismo en Trinidad y Sancti Spíritus" class="selection-img">
         <div class="overlay">
