--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta property="og:image" content="https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="agenciaseniors.github.io">
+  <meta property="twitter:domain" content="agenciaseniors.com">
   <meta property="twitter:url" content="https://agenciaseniors.com/">
   <meta name="twitter:title" content="SEÑORES | Diseño Web y Software en el Centro de Cuba">
   <meta name="twitter:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales.">
