--- a/articulos/guia-ficha-costo-mipyme-cuba.html
+++ b/articulos/guia-ficha-costo-mipyme-cuba.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
+  <link rel="canonical" href="https://agenciaseniors.com/articulos/guia-ficha-costo-mipyme-cuba.html" />
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
