--- a/articulos/seo-gastronomico-sancti-spiritus.html
+++ b/articulos/seo-gastronomico-sancti-spiritus.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
+  <link rel="canonical" href="https://agenciaseniors.com/articulos/seo-gastronomico-sancti-spiritus.html">
 </head>
 <body>
   <header>
