--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
+  <link rel="canonical" href="https://agenciaseniors.com/articulos/automatizacion-whatsapp-negocios.html" />
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
 <script>
