--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/blog.css">
+  <link rel="canonical" href="https://agenciaseniors.com/blog.html" />
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
