--- a/index.html
+++ b/index.html
@@ -27,14 +27,26 @@
   <meta name="twitter:title" content="SEÑORES | Diseño Web y Software en el Centro de Cuba">
   <meta name="twitter:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales.">
   <meta name="twitter:image" content="https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif">
-  <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/logo-192.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="img/logo-192.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/img/logo-192.png">
+  <link rel="apple-touch-icon" href="/img/logo-192.png">
+
   <link rel="canonical" href="https://agenciaseniors.com/" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "SEÑORES",
+  "url": "https://agenciaseniors.com",
+  "logo": "https://agenciaseniors.com/img/logo-192.png"
+}
+</script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
