--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <a href="#contacto">CONTACTO</a>
   </div>
 
-</header> ```
+</header>
 
 <section class="hero reveal" id="hero">
   <h1 style="font-size: clamp(40px, 5vw, 64px); font-weight: 900; font-family: 'Playfair Display', serif; color:var(--blanco-puro); line-height: 1.1; margin-bottom: 20px;">
