--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,13 @@
     <a href="blog.html" style="color: #D4AF37;">BLOG</a> 
     <a href="index.html#contacto">CONTACTO</a>
   </nav>
+
+  <div class="mobile-menu" id="mobileMenu">
+    <a href="index.html">INICIO</a>
+    <a href="blog.html" style="color: #D4AF37;">BLOG</a>
+    <a href="index.html#contacto">CONTACTO</a>
+  </div>
+
   <button class="menu-btn">☰</button>
 </header>
 
