--- a/blog.html
+++ b/blog.html
@@ -212,7 +212,7 @@
     </div>
   </div>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
